@@ -9,6 +9,7 @@ miscellaneous
  gameoflife
  hermitepoly
  hilbert_curve
+ idxmatrix
  infoskeleton
  laguerrepoly
  legendrepoly
